# MPC-Framework

./: BPGraph.cpp  BPGraph.h  CMakeLists.txt  Constant.cpp  Constant.h  IOManager.cpp  IOManager.h  Mat.cpp  Mat.h  MathOp.cpp  MathOp.h  NN.cpp  NN.h  NeuronMat.cpp  NeuronMat.h  Op.cpp  Player.cpp  README.md  SocketManager.cpp  SocketManager.h  SocketOnline.cpp  SocketOnline.h  main.cpp
